2.0.2
	+ CUPS configuration is saved when backing up
	+ Override restoreDepends to remove samba
	+ Added network as dependency of printers
	+ Include support for HP printers by default
	+ Remove duplicated table creation in enable script
	+ cups init.d script is disabled when enabling the module
2.0.1
	+ Bug fix: cups daemon is now started before samba one
1.5.2
	+ Zentyal rebrand
1.5.1
	+ Use CUPS interface instead of eBox to add and manage printers
1.5
	+ Do not modify /etc/cups/mime.convs as it doesn't exist anymore
1.3.14
	+ Bug fix: filter some drivers such as /Postcript.+/
	+ Bug fix: only show Raw model when there is no model available
1.3.13
	+ Bug fix: cancel jobs
	+ Add a button to print a test page
	+ Check if a model has not available drivers instead of showing
	  an empty select
	+ Add function to check if a printer is already available in CUPS
1.1.30
	+ Added IPP and LPD printers
1.1.20
	+ New release
0.12.101
	+ Bug fix: Use isEnabled() instead of deprecated service()
0.12.1
	+ Add support for external printers configured with CUPS
0.12
	+ Bugfix: Create the `job` table when installing. This readds a
	bunch of lost lines from ubuntu merging.
0.11.101
	+ New release
0.11.100
	+ onInstall() functionality moved to migration script
	+ Bugfix. Quote file names to avoid issues with ppds containing spaces
0.11.99
	+ New release
0.11
	+ New release
0.10.99
	+ New release
0.10
	+ New release
0.9.100
	+ New release
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added German translation

0.8.99
	+ New release
0.8.1
	+ New release
0.8
	+ New release
0.7.99
        + Minor bugfixes
O.7.1
	+ GUI improvements
	+ Use of ebox-sudoers-friendly
0.7
	+ First public release
0.6
	+ Initial release