@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed config backup when some etc files doesn't exist
 2.0.2
 	+ CUPS configuration is saved when backing up
 	+ Override restoreDepends to remove samba
